FIX: optimized styles for gap

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -550,7 +550,8 @@
   display: flex;
   justify-content: space-between;
   padding: 0 0 22px;
-  margin: 0 15px;
+  margin-left: 15px;
+  margin-right: 15px;
   border-bottom: 1px solid rgba($gray, 0.2);
   flex: 0 0 calc(100% - 30px);
   order: 1;
@@ -558,8 +559,9 @@
   position: relative;
 
   @include media-breakpoint-up($desktop-breakpoint) {
-    margin: 0;
-    padding: 0;
+    margin-left: 0;
+    margin-right: 0;
+    padding-bottom: 0;
     z-index: 5;
     justify-content: flex-end;
     order: 2;
